# ArtOfIA

./: .env.example  .gitignore  README.md  benchmark_runner.py  cost_manager.py  docker-compose.yml  dry_run_test.py  dual_llm_pattern.py  executor.py  knowledge_base.py  langgraph_per_agent.py  main_orchestrator.py  mutators.py  planner.py  polymorphic_bridge.py  prd.json  ralph_loop.sh  react_agent.py  recon_tools.py  reflector.py  reporting.py  seed_kb.py  semantic_memory.py  stop-hook.sh  test_mutators.py  tool_executor.py  validate_local_sniper.py  waf_evasion.py
brain/: Dockerfile  requirements.txt
brain/app/: main.py
brain/app/static/: app.js  index.html  styles.css
chroma_db/: chroma.sqlite3
mcp_server/: .env.example  Dockerfile  pyproject.toml  requirements.txt  test_smoke.py
mcp_server/app/: main.py  schemas.py  tools.py
mcp_server/app/core/: config.py  logging.py
scripts/: force_sniper_test.py  run_focused_waf_test.py
tests/: test_xbow.py
tests/lfi_fakes/: index.html  secret.txt
worker/: Dockerfile
