[project]
name = "artof-mcp"
version = "0.1.0"
description = "Minimal production-ready MCP server for offensive security tooling"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
artof-mcp = "app.main:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"
